src/App.css
/* Basic Layout */

.header,
.navigation,
.navigation-list,
.navigation-list__item,
.content-wrapper,
.content-info__wrapper,
.content-bg-image__1,
.content-bg-image__2,
.testimonials-wrapper,
.testimonials-card,
.footer-wrapper {
  display: flex;
  flex-direction: column;
}

.navigation-list,
.content-info__wrapper,
.testimonials-card {
  gap: 2rem;
}

.header-wrapper,
.navigation,
.navigation-list__item,
.testimonials-card,
.testimonials-wrapper,
.footer-wrapper {
  align-items: center;
}

/* Basic Typogrophy */

.header-title,
.content-title,
.content-learn-more__link,
.testimonials-card__name {
  font-family: 'Fraunces';
  font-weight: var(--font-bold);
}

.header-title,
.content-wrapper,
.testimonials-wrapper,
.testimonials-card,
.testimonials-title,
.testimonials-card-info__wrapper {
  text-align: center;
}

/* Header Styles */

.header {
  background: url('/assets/images/mobile/image-header.jpg') no-repeat center;
  background-size: cover;
  min-height: 538px;
  padding: 1.5rem;
}

.header-wrapper {
  display: flex;
  justify-content: space-between;
}

.header-title {
  text-transform: uppercase;
  color: var(--neutral-white);
  letter-spacing: var(--heading-1-spacing);
  font-size: var(--heading-1);
  margin: 0;
  margin-top: 5.5rem
}

.header-arrow {
  align-self: center;
  margin-top: 2rem;
}

/* Navigation Styles */

.navigation-wrapper {
  position: relative;
}

.navigation {
  color: var(--neutral-dark-grayish-blue);
  font-weight: 700;
  position: absolute;
  left: 100%;
  transform: translateX(-100%);
  min-height: 329px;
  width: 87vw;
  max-width: 468px;
  border: black 1px solid;
  margin-top: 1.5rem;
  justify-content: center;
  --b: 2em; /* base */
  --h: 1em; /* height */

  --p: 100%; /* triangle position (0%:left 100%:right) */
  
  padding: 1em;
  clip-path: polygon(0 0,0 100%,100% 100%,100% 0,
    min(100%,var(--p) + var(--b)/2) 0,
    var(--p) calc(-1*var(--h)),
    max(0%  ,var(--p) - var(--b)/2) 0);
    border-image: fill 0// var(--h)
    conic-gradient(var(--neutral-white) 0 0); 
}

.navigation[aria-hidden='true'] {
  display: none;
}

.navigation-list__item {
  justify-content: center;
}
.navigation-list__item-link {
  color: inherit;
  font-size: var(--nav-link);
  padding: .75rem 1rem;
  display: inline-block;
}

.navigation-list__item-link:hover {
  background-color: var(--primary-yellow);
  border-radius: 1.5rem;
  color: var(--neutral-v-dark-blue);
  text-transform: uppercase;
}

.navigation-button {
  background-color: unset;
  border: none;
}

.navigation-hamburger {
  fill: var(--neutral-white)
}

/* Main Content Section */

.content-image > img {
  width: 100%;
  display: block;
}
.content-info__wrapper {
  padding: 1.5rem;
}
.content-title {
  font-size: var(--heading-2);
  color: var(--neutral-v-dark-blue);
  letter-spacing: -.014rem;
  margin-top: 2.5rem;

}
.content-blurb {
  font-weight: 700;
  color: var(--neutral-dark-grayish-blue);
  font-size: 1.125rem;
}
.content-learn-more__link {
  margin-top: .75rem;
  color: var(--neutral-v-dark-blue);
  text-transform: uppercase;
  letter-spacing: .0625rem;
  position: relative;
  align-self: center;
}

.content-learn-more__link::before {
  content: '';
  position: absolute;
  width: 110%;
  height: .625rem;
  z-index: -1;
  border-radius: 1rem;
  bottom: .01rem;
  left: -.40rem;
}

.content-learn-more__link-1::before {
  background-color: var(--primary-yellow);
}
.content-learn-more__link-2::before {
  background-color: var(--primary-red);
}

.content-bg-image__1,
.content-bg-image__2 {
  padding: 1.5rem;
  padding-top: 24.875rem;

}

.content-bg-image__1 {
  background: url('/assets/images/mobile/image-graphic-design.jpg') no-repeat;
  background-size: cover;
}
.content-bg-image__2 {
  background: url('/assets/images/mobile/image-photography.jpg') no-repeat;
  background-size: cover;
}

.content-bg-image__wrapper {
  padding-bottom: 3.5rem;
  padding-top: 2rem;
}

.content-bg-image__title {
  margin-bottom: 1.6875rem;
  color: var(--neutral-v-dark-blue);
  font-weight: 900;
}

/* Testimonials Section */

.testimonials {
  padding: 1.5rem ;
}

.testimonials-title {
  color: var(--neutral-dark-grayish-blue);
  text-transform: uppercase;
  padding: 2.5rem 0;
  letter-spacing: .3125rem;
}

.testimonials-card {
  padding-bottom: 4rem;
}

.testimonials-card__info {
  color: var(--neutral-v-dark-grayish-blue);
  font-weight: 500;
}

.testimonials-card__name {
  font-size: 1.125rem;
}

.testimonials-card__title {
  color: var(--neutral-grayish-blue);
}

.testimonials-card > img {
  border-radius: 50%;
  width: 4.5rem;
}

.hero-wrapper {
  display: grid;
  grid-template-columns: repeat(2,1fr);
}

/* Footer section */

.footer {
  background-color: var(--primary-light-cyan);
  padding: 4rem 2.4375rem 5.5rem;
}

.footer-wrapper-list {
  display: flex;
}
.footer-wrapper {
  max-width: 18.75rem;
  margin: 0 auto;
  gap: 2.5rem;
}

.footer-wrapper-list__links {
  gap: 3.5625rem
}

.footer-wrapper-list__socials {
  gap: 1.75rem;
  margin-top: 2.75rem;
}

.footer-wrapper-list__item > a {
  color: var(--primary-moderate-cyan);
  font-weight: 700;
  fill: var(--primary-cyan)
}

.footer-wrapper-list__item > a:hover {
  color: var(--neutral-white);
  fill: var(--neutral-white)
}

.attribution {
  display: block;
  margin: 1rem auto;
}



@media (min-width: 1026px){
  html {
    font-size: 20px;
  }

  /* Header */

  .header {
    background-image: url('/assets/images/desktop/image-header.jpg');
  }

  /* Main Content */

  .content-wrapper {
    display: flex;
    flex-direction: row;
    align-items: stretch;
  }
  .content-info__wrapper {
    flex-basis: 50%;
    gap: 1.5rem;
    text-align: left;
    padding: 0 5rem;
    padding-bottom: 2rem;
    align-self: center;
  }

  .content-learn-more__link {
    align-self: flex-start;
  }

  .content-image,
  .content-bg-image__1,
  .content-bg-image__2 {
    flex-basis: 50%;
  }

  .content-bg-image__1 {
    background: url('/assets/images/desktop/image-graphic-design.jpg') center no-repeat;
    background-size: cover;
  }
  .content-bg-image__2 {
    background: url('/assets/images/desktop/image-photography.jpg') center no-repeat;
    background-size: cover;
  }

  .content-bg-image__wrapper {
    padding: 0  5rem 2.187rem 5rem;
  }

  .row-reverse {
    flex-direction: row-reverse;
  }

  /* Testimonials */
  .testimonials-wrapper {
    flex-direction: row;
    max-width: 1120px;
    margin: 0 auto;
    gap: 1.5rem;
  }

  /* Hero Section */
  .hero-wrapper {
    grid-template-columns: repeat(4,1fr);
  }

  #root {
    max-width: 1440px;
  }
}

